sass/px-app-nav.scss
/*
 * Copyright (c) 2014 GE Global Research. All rights reserved.
 *
 * The copyright to the computer software herein is the property of
 * GE Global Research. The software may be used and/or copied only
 * with the written permission of GE Global Research or in accordance
 * with the terms and conditions stipulated in the agreement/contract
 * under which the software has been supplied.
 */

// Settings
@import "px-colors-design/_settings.colors.scss";

// Tools

// Generic
@import "px-normalize-design/_generic.normalize.scss";
@import "px-box-sizing-design/_generic.box-sizing.scss";
@import "px-helpers-design/_generic.helpers.scss";

// Base
@import "px-flexbox-design/_base.flexbox.scss";
@import "px-viewport-design/_base.viewport.scss";
@import "px-typography-design/_base.typography.scss";

// Meta

// Objects

// Component

// .app-nav-toolbar {
//   background-color: rgb(223, 230, 234);
//   box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 3px;
//   height: 60px;
//   padding-left: 0;
//   align-items: flex-start;
// }

// px-app-nav-item {
//   color: #425866;
//   height: 60px;
//   display: flex;
//   align-items: center;
//   padding-left: 15px;
//   padding-right: 15px;
//   font-size: 15px;
//   cursor: pointer;
//   position: relative;
// }

@import "app-nav-shared";
.app-nav-items__collapse-button {
  @extend %app-nav-button;
  display: none;
  position: relative;
  --iron-icon-height: 30px;
  --iron-icon-width: 30px;
}
.app-nav-items__collapse-button--selected {
  @extend %app-nav-button--selected;
}
.app-nav-items__collapse-button--visible {
  display: inherit;
}

// Trumps
@import "inuit-clearfix/_trumps.clearfix.scss";
@import "px-spacing-responsive-design/_trumps.spacing-responsive.scss";
@import "px-widths-responsive-design/_trumps.widths-responsive.scss";

